✨ Add hyppo info section

--- a/src/pages/alpd-academy.astro
+++ b/src/pages/alpd-academy.astro
@@ -221,7 +221,7 @@ import Layout from "../layouts/Layout.astro";
                         <img src="/assets/images/alpd-academy/finger-print.png" alt="">
                     </picture>
                     <p class="number__kpi-legend">
-                        &#60;40 U/L <sup>*</sup>
+                        &#60;40 U/L <sup class="symbol-sup">*</sup>
                     </p>
                 </div>
                 <p class="number__kpi-description">
@@ -259,10 +259,31 @@ import Layout from "../layouts/Layout.astro";
                     <img src="/assets/images/alpd-academy/7m-age-and-sec-chart-mobile.png" alt="">
                 </picture>
                 <p class="chart__paragraph">
-                    <sup>*</sup>Check with your lab for their appropriate age- and sex-adjusted reference range.<sup>1,24</sup>
+                    <sup class="symbol-sup">*</sup>Check with your lab for their appropriate age- and sex-adjusted reference range.<sup>1,24</sup>
                 </p>
                 <p class="chart__paragraph">
                     Graph adapted from the Canadian Laboratory initiative on Pediatric Reference Intervals (CALIPER) project. CALIPER samples from 1072 male and 1116 female participants (newborn to 18 years) were used to calculate age- and sex-specific reference intervals. No variation in ALP based on ethnic differences was observed.<sup>23</sup>
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="hypophosphatasia-info">
+        <div class="red-string first"></div>
+        <picture class="postit">
+            <img src="/assets/images/alpd-academy/postit-mobile.png" alt="">
+        </picture>
+        <picture class="postit-mask">
+            <img src="/assets/images/alpd-academy/postit-mask-mobile.png" alt="">
+        </picture>
+        <div class="red-string last"></div>
+        <div class="hypophosphatasia-info__content">
+            <div class="wrapper">
+                <p>
+                    Though the dangers of high alkaline phosphatase levels may be commonly recognized, persistently low alkaline phosphatase, defined as having <span class="color--red sz-500:color--saffron-mango">2 values below normal in intervals of more than 30 days,<sup class="symbol-sup">*</sup></span> a key piece of evidence of a hypophosphatasia diagnosis.<sup>1,5,16,17,24,25</sup>
+                </p>
+                <p class="text--14px text--400">
+                    <sup class="symbol-sup">*</sup>Alkaline phosphatase ranges must be age- and sex-adjusted.
                 </p>
             </div>
         </div>
