✨ Add last call to action

--- a/src/pages/alpd-academy.astro
+++ b/src/pages/alpd-academy.astro
@@ -288,5 +288,16 @@ import Layout from "../layouts/Layout.astro";
             </div>
         </div>
     </div>
+
+    <div class="hpp-profile__call-out">
+        <p class="hpp-profile-text">
+            Read the full file on hypophosphatasia
+        </p>
+        <a href="#" class="button">HPP Profile</a>
+
+        <div class="red-string first"></div>
+        <div class="red-string second"></div>
+        <div class="red-string third"></div>
+    </div>
   </section>
 </Layout>
