--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -222,6 +222,11 @@
             font-weight: 600;
             line-height: 25.2px;
             margin-bottom: 1.5rem;
+
+            @media screen and (min-width: 1024px) {
+                font-size: 1.375rem;
+                line-height: 30.8px;
+            }
         }
 
         .alpd-academy__alkaline-content {
@@ -450,6 +455,11 @@
         font-weight: 600;
         line-height: 25.2px;
         margin-bottom: 1.5rem;
+
+        @media screen and (min-width: 1024px) {
+            font-size: 1.375rem;
+            line-height: 30.8px;
+        }
     }
 
     .alpd-academy__deficient-paragraph {
