feat: :sparkles: add patients section

--- a/src/pages/hpp-profile.astro
+++ b/src/pages/hpp-profile.astro
@@ -35,4 +35,27 @@ import Layout from "../layouts/Layout.astro";
     </div>
 
   </section>
+
+  <section id="hpp-patiens" class="hpp-patients__section">
+    <!-- <div class="hpp__profile__red-frame-disclaimer">
+      <p class="hpp__profile__paragraph hpp__profile__paragraph--sub hpp__profile__red-frame-disclaimer--content color--white text--center">
+        Reduced alkaline phosphatase levels during childhood may affect peak bone mass later in life15,16
+      </p>
+    </div> -->
+
+    <div class="wrapper hpp-patients__section--bg-white">
+      <h1>
+        Percent of patients with hypophosphatasia fractures
+      </h1>
+      <picture>
+        <source srcset="/assets/images/hpp-profile/hpp-patients-chart.png" media="(min-width: 700px)"/>
+        <img class="hpp-patiens__image" src="/assets/images/hpp-profile/hpp-patients-chart.png" alt="HPP Profile">
+      </picture>
+      <p>
+        Data from a multinational, noninterventional, retrospective chart review study designed to understand the natural history of 48 patients ≤5 years of age with severe perinatal- and infantile-onset HPP. Patients included in the study were those diagnosed with HPP based on at least one of the following: serum biomarker levels (below-normal ALP and above-normal PLP or phosphoethanolamine [PEA]), below-normal ALP and radiographic abnormalities, and/or genetic analysis of the ALPL gene. Additionally, onset of HPP must have occurred prior to 6 months of age based on signs that included at least one of the following: respiratory compromise, rachitic chest deformity, and/or vitamin B6-responsive seizures.10
+        Data from a retrospective, multinational, noninterventional natural history study of childhood HPP in patients 5 to 15 years of age (N=32).17
+        Combined data from HIPS/HOST, an internet questionnaire and telephone survey that queried demographics, HPP-related illness history, disease progression, and health-related quality of life. One hundred twenty-five adults participated.18
+      </p>
+    </div>
+  </section>
 </Layout>
