--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -22,6 +22,7 @@
 @import './components/case-file';
 @import './components/alpd-video';
 @import './components/detective-form';
+@import './components/internal-nav';
 
 
 .section__home-video {
