Fix References component name

--- a/src/pages/alpd-academy.astro
+++ b/src/pages/alpd-academy.astro
@@ -1,5 +1,6 @@
 ---
 import CTA from "../components/CTA.astro";
+import References from "../components/References.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -489,5 +490,6 @@ import Layout from "../layouts/Layout.astro";
       linkURL="#"
       content="Read the full file on hypophosphatasia"
     />
+    <References />
   </section>
 </Layout>
