--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -990,6 +990,7 @@
 
     @media screen and (min-width: 768px) {
         padding: 4.5rem 0;
+        margin-bottom: 7rem;
     }
 
     .hpp-profile-text {
