fixing styles in variant-2

--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -383,4 +383,19 @@ import "../styles/settings/_design.scss";
       </div>
     </div>
   </section>
+  <section class="design-system-section">
+    <div class="section-wrapper section-wrapper--small">
+      <h1 class="title">Accordions</h1>
+      <div class="accordion">
+        <Accordion id="2" header="ACC 2">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+            pariatur labore perspiciatis repudiandae aliquid quae doloribus!
+            Ratione, fugiat quae ad dolor voluptatum esse laborum porro id non
+            animi, sapiente exercitationem.
+          </p>
+        </Accordion>
+      </div>
+    </div>
+  </section>
 </Layout>
