--- a/src/styles/components/_references.scss
+++ b/src/styles/components/_references.scss
@@ -15,7 +15,7 @@
     span,p,a{
         color: white;
     }
-
+    
     p, a{
         font-size: .75rem;
         font-family: 'Barlow';
@@ -25,13 +25,18 @@
         
         
         @media screen and (min-width:375px) {
-        font-size: .875rem;
+            font-size: .875rem;
         }
     }
-
+    
     p{
         margin-left: 10px;
         margin-right: 10px;
+         
+        @media screen and (min-width:1250px) {
+            margin-left: 0;
+            margin-right: 0;
+        }
     }
 
     span{
