--- a/src/styles/components/_internal-nav.scss
+++ b/src/styles/components/_internal-nav.scss
@@ -3,11 +3,16 @@
     .internal__nav_list {
         display: flex;
         justify-content: center;
+        padding: .75rem 0;
     }
 
     .internal__nav_list_item {
-        padding: .75rem;
+        padding: .25rem .75rem;
         list-style-type: none;
+
+        &:not(:first-of-type) {
+            border-left: 1px solid $color-red;
+        }
 
         &.is--active {
             .internal__nav_list_item_link {
@@ -18,7 +23,7 @@
                     width: 100%;
                     background: $color-red;
                     height: .1875rem;
-    
+
                     position: absolute;
                     top: 101%;
                     left: 0;
@@ -32,12 +37,6 @@
             font-weight: 600;
             line-height: 24px;
             font-family: "oswald", sans-serif;
-        }
-
-        &:not(:first-of-type) {
-            .internal__nav_list_item_link {
-                border-left: 1px solid $color-red;
-            }
         }
     }
 }
