--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: $color-black;
+  background-color: transparent;
   border-top: 1px solid $color-white;
   // border-bottom: 1px solid $color-white;
   color: $color-black;
