--- a/src/styles/settings/_global.scss
+++ b/src/styles/settings/_global.scss
@@ -69,7 +69,7 @@ sup.symbol-sup {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-main {
+body {
     background-image: url("/assets/images/background-stars-mobile.png");
     background-color: #000000;
 
