CTA variants added to the design page

--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -1,6 +1,7 @@
 ---
 import Accordion from "../components/Accordion.astro";
 import Layout from "../layouts/Layout.astro";
+import CTA from "../components/CTA.astro";
 import "../styles/settings/_design.scss";
 ---
 
@@ -385,17 +386,29 @@ import "../styles/settings/_design.scss";
   </section>
   <section class="design-system-section">
     <div class="section-wrapper section-wrapper--small">
-      <h1 class="title">Accordions</h1>
-      <div class="accordion">
-        <Accordion id="2" header="ACC 2">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-            pariatur labore perspiciatis repudiandae aliquid quae doloribus!
-            Ratione, fugiat quae ad dolor voluptatum esse laborum porro id non
-            animi, sapiente exercitationem.
-          </p>
-        </Accordion>
+      <h1 class="title">CTA VARIANTS</h1>
+      <div class="fonts-preview" style="background-color: black; display:block; padding:0; padding-top:30px">
+        <div>
+          <h2 style="color: white; padding-left:30px;">VARIANT-1</h2>
+          <CTA variation="variant-1" buttonLabel="buttonLabel" content="Sample text" linkURL="#" bypassModal >
+          </div>
+        </div>
+        
+        <div class="fonts-preview" style="background-color: black; display:block; padding:0; padding-top:30px">
+        <div>
+        <h2 style="color: white; padding-left:30px;">VARIANT-2</h2>
+        <CTA variation="variant-2" buttonLabel="buttonLabel" content="Sample text" linkURL="#" bypassModal >
+        </div>
       </div>
-    </div>
+        
+      <div class="fonts-preview" style="background-color: black; display:block; padding:0; padding-top:30px">
+        <div>
+        <h2 style="color: white; padding-left:30px;">VARIANT-3</h2>
+        <CTA variation="variant-3" buttonLabel="buttonLabel" content="Sample text" linkURL="#" bypassModal >
+        </div>
+      </div>
+        
+      
+      </div>  
   </section>
 </Layout>
