--- a/src/styles/components/_accordions.scss
+++ b/src/styles/components/_accordions.scss
@@ -164,7 +164,7 @@
 
   [aria-expanded="true"] {
     background: none;
-    height: auto;;
+    height: auto;
     .accordion__item_title{
       color: $color-red;
     }
