fixing red strings in variant-1

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,4 +56,5 @@ import CTA from "../components/CTA.astro";
 
     <div class="red-string"></div>
   </section>
+  <CTA variation="variant-3" buttonLabel="buttonLabel" content="Sample text" linkURL="#" bypassModal ></CTA>
 </Layout>
